--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Змейка</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="game-wrap">
@@ -15,6 +15,6 @@
     </div>
     <div id="score">Счёт : 0</div>
 
-    <script src="js.js"></script>
+    <script src="script/js.js"></script>
   </body>
 </html>
